<!--
  ~  Copyright 2018 TheRedSpy15
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  -->

<resources>
    <string name="app_name">LTE Cleaner (FOSS)</string>
    <string name="clean">Clean</string>
    <string name="lte_cleaner">LTE Cleaner! Logs, Temporary and Empty Cleaner</string>
    <string name="no_files_found">No files found</string>
    <string name="delete_empty_folders">Delete empty folders</string>
    <string name="delete_cache_files">Delete .cache files</string>
    <string name="delete_tmp_files">Delete .tmp files</string>
    <string name="delete_log_files">Delete .log files</string>
    <string name="delete_apk_files">Delete .apk files</string>
    <string name="clear_clipboard">Clear clipboard</string>
    <string name="Save">Save</string>
    <string name="filter">Filter</string>
    <string name="whitelist">Whitelist</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="add_to_whitelist">Add to whitelist</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="enter_file_name">Enter file/folder name to whitelist</string>
</resources>
