<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2018 TheRedSpy15
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SettingsActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="217dp"
        android:layout_height="263dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/filter"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/emptyFolderBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/delete_empty_folders"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/scrollView2"
                app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

            <CheckBox
                android:id="@+id/tmpBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/delete_tmp_files"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

            <CheckBox
                android:id="@+id/cacheBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/delete_cache_files"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

            <CheckBox
                android:id="@+id/logBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/delete_log_files"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

            <CheckBox
                android:id="@+id/apkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/delete_apk_files"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />
        </LinearLayout>
    </ScrollView>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="80dp"
        android:onClick="save"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPrimaryDark"
        fancy:fb_focusColor="@color/colorAccent"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/Save"
        fancy:fb_textColor="#FFFFFF" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="80dp"
        android:onClick="back"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        fancy:fb_fontIconResource="&#xf060;"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPrimaryDark"
        fancy:fb_focusColor="@color/colorAccent"
        fancy:fb_radius="30dp"
        fancy:fb_text=""
        fancy:fb_textColor="#FFFFFF" />

    <ListView
        android:id="@+id/whitelistView"
        android:layout_width="322dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/whitelist"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/privacyPolicyButton"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="viewPrivacyPolicy"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="parent"
        fancy:fb_fontIconResource="&#xf0c1;"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPrimaryDark"
        fancy:fb_focusColor="@color/colorAccent"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/privacy_policy"
        fancy:fb_textColor="#FFFFFF" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/addWhiteList"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:onClick="addToWhitelist"
        android:paddingBottom="1dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPrimaryDark"
        fancy:fb_focusColor="@color/colorAccent"
        fancy:fb_radius="30dp"
        fancy:fb_fontIconResource="&#xf067;"
        fancy:fb_text=""
        fancy:fb_textColor="#FFFFFF" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/resetWhiteList"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:onClick="resetWhitelist"
        android:paddingBottom="1dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPrimaryDark"
        fancy:fb_focusColor="@color/colorAccent"
        fancy:fb_radius="30dp"
        fancy:fb_fontIconResource="&#xf0e2;"
        fancy:fb_text=""
        fancy:fb_textColor="#FFFFFF" />

</android.support.constraint.ConstraintLayout>